// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should add additional classes if provided 1`] = `
<span
  class="root undefined material-icons colored"
  data-testid="icon"
>
  account
</span>
`;

exports[`<Icon /> should not add additional classes by default 1`] = `
<span
  class="root undefined material-icons"
  data-testid="icon"
>
  account
</span>
`;

exports[`<Icon /> should not add material-icons class for custom icon elements 1`] = `
<span
  class="root undefined"
  data-testid="icon"
>
  <span />
</span>
`;

exports[`<Icon /> should render large icon 1`] = `
<span
  class="root large material-icons"
  data-testid="icon"
>
  account
</span>
`;

exports[`<Icon /> should render small icon 1`] = `
<span
  class="root small material-icons"
  data-testid="icon"
>
  account
</span>
`;
